<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/myfollow_list_item_height">

    <com.exa.framelib_rrm.base.view.view.CircleImageView
        android:id="@+id/iv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="@dimen/myfollow_list_item_widget_margin"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg10"/>

    <TextView
        android:id="@+id/tv_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/myfollow_list_item_widget_margin"
        android:paddingRight="@dimen/myfollow_list_item_widget_margin"
        android:layout_marginRight="@dimen/myfollow_list_item_widget_margin"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/mainColor"
        android:background="@drawable/shape_bg_follow"
        android:text="@string/add_follow"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_toRightOf="@id/iv"
        android:layout_toLeftOf="@id/tv_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/myfollow_list_item_widget_margin"
        android:textSize="@dimen/textsize_medium"
        android:textColor="@color/black"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/name_example"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_toRightOf="@id/iv"
        android:layout_toLeftOf="@id/tv_follow"
        android:layout_below="@id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="@dimen/textsize_small"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/myfollow_list_item_widget_margin"
        android:ellipsize="end"
        android:text="@string/info_example"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"
        android:layout_toRightOf="@id/iv"
        android:layout_marginRight="@dimen/myfollow_list_item_widget_margin"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>